--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+
 
     <!-- getMDL layout-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-amber.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+    <!-- offline usage -->
+    <!--
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/material.min.css">
     <script src="{{ site.baseurl }}/assets/scripts/material.min.js"></script>
+    -->
 
     <style>
-        .demo-layout-waterfall .mdl-layout__header-row .mdl-navigation__link:last-of-type  {
-            padding-right: 0;
-        }
+
     </style>
 
     <!-- own style -->
