update path to missing resources

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,7 +36,7 @@
 
     <ul>
         <li class="nav-item top-level">
-            <a href="{{site.git.url}}" target="_blank">Preview on {{site.git.title}}</a>
+            <a href="{{ site.git.url }}" target="_blank">Preview on {{ site.git.name }}</a>
         </li>
     </ul>
 </nav>
