--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
 
     <!-- own style -->
     <!--<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css">-->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.ico" sizes="32x32">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="./assets/images/favicon.ico" sizes="32x32">
     {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
     <script>
         window.ga = window.ga || function () {
