offline usage of material style and scripts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
-<header class="mdl-layout__header mdl-layout__header--waterfall">
+<header class="mdl-layout__header mdl-layout__header--waterfall no-color">
     <!-- Top row, always visible -->
     <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">Title</span>
+        <span class="mdl-layout-title">
+            <a href="/">Title</a></span>
         <div class="mdl-layout-spacer"></div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
