--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,28 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
 
+    <!-- material font and icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
     <!-- getMDL layout-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-amber.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-    <!-- offline usage -->
-    <!--
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/material.min.css">
-    <script src="{{ site.baseurl }}/assets/scripts/material.min.js"></script>
-    -->
+    <!-- offline (developer) usage -->
+    <link rel="stylesheet" href="./assets/style/material.teal-amber.min.css">
+    <script src="./assets/scripts/material.min.js"></script>
 
-    <style>
+    <!-- search -->
+    <script src="./assets/scripts/lunr.min.js"></script>
 
-    </style>
 
     <!-- own style -->
-    <!--<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css">-->
+    <link rel="stylesheet" href="./assets/style/main.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="./assets/images/favicon.ico" sizes="32x32">
+
+    <!--
     {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
     <script>
         window.ga = window.ga || function () {
@@ -40,6 +41,7 @@
     </script>
     <script async src='https://www.google-analytics.com/analytics.js'></script>
     {% endif %}
+    -->
 </head>
 
 <body>
@@ -68,98 +70,6 @@
     </main>
 
 </div>
-
-
-<!--
-
-<header>
-    <nav>
-        <div class="container">
-            <a href="{{ site.baseurl }}/">
-                <img class="logo mobile" src="{{ site.baseurl }}/assets/images/salsah-icon.png">
-                <img class="logo desktop" src="{{ site.baseurl }}/assets/images/salsah-logo.png">
-            </a>
-
-            <span class="fill-remaining-space"></span>
-
-            <form action="#">
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label">
-                    <input class="mdl-textfield__input" type="text" id="sample3">
-                    <label class="mdl-textfield__label" for="sample3">Text...</label>
-                </div>
-            </form>
-
-            <form action="{{ site.baseurl }}/search/" method="get">
-                <input type="search" name="q" id="search-input" placeholder="Search" autofocus>
-
-                &lt;!&ndash;<i class="material-icons search-icon">
-                    search
-                </i>&ndash;&gt;
-
-                <input type="submit" value="Search" style="">
-            </form>
-        </div>
-    </nav>
-
-</header>
-
-
-<div class="content">
-
-</div>
-
-<footer>
-    &lt;!&ndash; <p class="editor-link" style="margin-bottom: 20px;">
-            <a href="cloudcannon:collections/_data/company.yml" class="btn"><strong>&#9998;</strong> Update footer</a>
-        </p> &ndash;&gt;
-    <div class="container">
-        <div class="about">
-            &lt;!&ndash; <p>{{ site.company.mission_statement }}</p> &ndash;&gt;
-            <p>Knora is developed by the team at the {{ site.links.dhlab }} and the {{ site.links.dasch }}</p>
-        </div>
-
-        <div class="contact">
-            <address>
-                <a href="https://www.google.com/maps/place/{{ site.company.address | url_encode }}">
-                    {% include icons/address.html icon="place" %} {{ site.company.address }}
-                </a>
-            </address>
-            <p class="email">
-                <a href="mailto:{{ site.company.email }}">
-                    {% include icons/address.html icon="email" %} {{ site.company.email }}
-                </a>
-            </p>
-            <p class="phone">
-                <a href="tel:{{ site.company.phone | replace: ' ', '-' }}">
-                    {% include icons/address.html icon="phone" %} {{ site.company.phone }}
-                </a>
-            </p>
-        </div>
-
-        <div class="sharing">
-            <p>
-                <a class="github" href="https://www.github.com/{{ site.company.github }}">
-                    {% include icons/social-media.html social_icon="github" %}&nbsp;&nbsp;{{ site.company.github }}
-                </a>
-            </p>
-            <p>
-                <a class="twitter" href="https://twitter.com/{{ site.company.twitter }}">
-                    {% include icons/social-media.html social_icon="twitter" %}&nbsp;{{ site.company.twitter }}
-                </a>
-            </p>
-        </div>
-    </div>
-</footer>
-<p class="copyright">
-    <a href="https://cloudcannon.com/">
-        Template by CloudCannon
-    </a>
-    |
-    <a href="https://lakto.design">
-        Optimized by lakto.design
-    </a>
-</p>
--->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
