--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!--
 
 <nav {% if site.show_full_navigation %}class="full-navigation" {% endif %}>
 
@@ -44,10 +45,10 @@ layout: default
         </li>
     </ul>
 </nav>
+-->
 
 
-<section>
-    <div class="container">
+    <div class="content">
         <h2>{{ page.title }}</h2>
 
         {{ content }}
@@ -59,4 +60,3 @@ layout: default
         </p>
         {% endif %}
     </div>
-</section>
