--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,36 @@
 <nav {% if site.show_full_navigation %} class="mdl-navigation" {% endif %}>
 
-    <ul>
-        <li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
-            {% assign home = site.html_pages | where: 'url', '/' | first %}
-            <a href="{{ site.baseurl }}/">{{ home.title }}</a>
-        </li>
-    </ul>
+    <span class="mdl-layout-title">
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    </span>
+
+
+    {% assign grouped = site.docs | group_by: 'category' %}
+    {% for group in grouped %}
+        {% assign items = group.items | sort: 'order' %}
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
+        <!-- child elements -->
+
+        <nav class="mdl-navigation">
+            {% for item in items %}
+            <a class="mdl-navigation__link" href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+            {% endfor %}
+        </nav>
+
+    {% endfor %}
+
+    <hr>
+
+    {% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}
+    <a class="mdl-navigation__link" href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>
+
+    {% assign releasenotes = site.html_pages | where: 'url', '/releasenotes/' | first %}
+    <a class="mdl-navigation__link" href="{{ site.baseurl }}/releasenotes/">{{ releasenotes.title }}</a>
+
+    <a class="mdl-navigation__link" href="{{ site.git.url }}" target="_blank">Preview on {{ site.git.name }}</a>
+</nav>
+
+    <!--
 
     <ul>
         {% assign grouped = site.docs | group_by: 'category' %}
@@ -47,3 +72,4 @@
     <a class="mdl-navigation__link" href="">Link</a>
     <a class="mdl-navigation__link" href="">Link</a>
 </nav>
+-->
