--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -8,7 +8,15 @@ address {
   font-size: inherit !important; }
 
 .no-color {
-  background: #fff;
-  color: #2b2b2b; }
+  background: #fff !important;
+  color: #2b2b2b !important; }
+  .no-color a {
+    color: inherit;
+    text-decoration: none; }
+
+.page-content {
+  margin: 0 auto;
+  width: 90vw;
+  max-width: 900px; }
 
 /*# sourceMappingURL=main.css.map */
