more on styling; navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,17 +16,17 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
     <!-- offline (developer) usage -->
-    <link rel="stylesheet" href="./assets/style/material.teal-amber.min.css">
-    <script src="./assets/scripts/material.min.js"></script>
+    <link rel="stylesheet" href="{{ site.base }}/assets/style/material.teal-amber.min.css">
+    <script src="{{ site.base }}/assets/scripts/material.min.js"></script>
 
     <!-- search -->
-    <script src="./assets/scripts/lunr.min.js"></script>
+    <script src="{{ site.base }}/assets/scripts/lunr.min.js"></script>
 
 
     <!-- own style -->
-    <link rel="stylesheet" href="./assets/style/main.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="./assets/images/favicon.ico" sizes="32x32">
+    <link rel="stylesheet" href="{{ site.base }}/assets/style/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.base }}/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="{{ site.base }}/assets/images/favicon.ico" sizes="32x32">
 
     <!--
     {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
