--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14,6 +14,9 @@ address {
     color: inherit;
     text-decoration: none; }
 
+.mdl-layout__drawer-button {
+  color: #2b2b2b !important; }
+
 .page-content {
   margin: 0 auto;
   width: 90vw;
