--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -18,6 +18,11 @@ address {
     color: inherit;
     text-decoration: none;
   }
+
+}
+
+.mdl-layout__drawer-button {
+  color: #2b2b2b !important;
 }
 
 .page-content {
