more content; navigation styling; intro ready

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="mdl-layout__header mdl-layout__header--waterfall no-color">
+<header class="mdl-layout__header mdl-layout__header--transparent">
     <!-- Top row, always visible -->
     <div class="mdl-layout__header-row">
         <!-- Title -->
@@ -20,10 +20,12 @@
             </div>
         </div>
     </div>
-    <!-- Bottom row, not visible on scroll -->
+
+    <!-- Bottom row, not visible on scroll --
     <div class="mdl-layout__header-row">
         <div class="mdl-layout-spacer"></div>
-        <!-- Navigation in the header (not used at the moment) -->
-        <!-- {!--% include navigation.html %--} -->
+        <!-- Navigation in the header (not used at the moment) --
+        <!-- {!--% include navigation.html %--} --
     </div>
+    -->
 </header>
