--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -7,10 +7,9 @@
 address {
   font-size: inherit !important; }
 
-.no-color {
-  background: #fff !important;
+.mdl-layout__header--transparent {
   color: #2b2b2b !important; }
-  .no-color a {
+  .mdl-layout__header--transparent a {
     color: inherit;
     text-decoration: none; }
 
@@ -21,5 +20,20 @@ address {
   margin: 0 auto;
   width: 90vw;
   max-width: 900px; }
+
+.intro-image {
+  width: 100%; }
+
+.rounded {
+  border-radius: 18px; }
+
+.outlined {
+  border: 1px solid #2b2b2b; }
+
+.parent-item {
+  font-weight: 700 !important; }
+
+.child-item {
+  margin-left: 12px !important; }
 
 /*# sourceMappingURL=main.css.map */
