--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% seo %}
 
     <!-- material font and icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
@@ -16,8 +16,8 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
     <!-- offline (developer) usage -->
-    <link rel="stylesheet" href="{{ site.base }}/assets/style/material.teal-amber.min.css">
-    <script src="{{ site.base }}/assets/scripts/material.min.js"></script>
+    <!--<link rel="stylesheet" href="{{ site.base }}/assets/style/material.teal-amber.min.css">-->
+    <!--<script src="{{ site.base }}/assets/scripts/material.min.js"></script>-->
 
     <!-- search -->
     <script src="{{ site.base }}/assets/scripts/lunr.min.js"></script>
@@ -46,7 +46,7 @@
 
 <body>
 
-<div class="demo-layout-waterfall mdl-layout mdl-js-layout">
+<div class="mdl-layout mdl-js-layout">
 
     <!-- header -->
     {% include header.html %}
