--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,17 @@
 * {
   font-family: 'Roboto', sans-serif; }
 
+a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bolder; }
+
+section {
+  width: 100%;
+  padding: 24px 0; }
+  section.darker {
+    background: #f8fafb; }
+
 address {
   font-size: inherit !important; }
 
@@ -14,9 +25,12 @@ address {
   color: #2b2b2b !important; }
 
 .page-content {
+  width: 100vw; }
+
+.section-content {
   margin: 0 auto;
-  width: 90vw;
-  max-width: 900px; }
+  max-width: 900px;
+  width: 90vw; }
 
 .intro-image {
   width: 100%;
@@ -41,9 +55,13 @@ section {
   padding-bottom: 48px; }
 
 .card-topic {
-  margin-top: -28px;
-  background: #fff !important;
-  box-shadow: 0 2px 2.5px -1.4px rgba(0, 0, 0, 0.12) !important; }
+  margin: 0 auto 0 auto;
+  width: 58px;
+  height: 29px; }
+  .card-topic .card-topic-icon {
+    margin-top: -28px;
+    background: #fff !important;
+    box-shadow: none !important; }
 
 .no-hidden-overflow {
   overflow: visible !important;
@@ -52,9 +70,28 @@ section {
 .smaller-headline {
   font-size: 18px; }
 
-.mdl-card__media img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; }
+.mdl-card__media {
+  background: none !important;
+  box-shadow: none !important;
+  position: relative; }
+  .mdl-card__media img {
+    width: 90%;
+    object-fit: contain;
+    position: absolute;
+    bottom: 48px; }
+    .mdl-card__media img.image-left {
+      left: 0; }
+    .mdl-card__media img.image-right {
+      right: 0; }
+
+.simple-border {
+  border: 1px solid rgba(43, 43, 43, 0.25); }
+
+.simple-border-bottom {
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  border: 1px solid rgba(43, 43, 43, 0.25);
+  border-top: 0;
+  box-sizing: border-box; }
 
 /*# sourceMappingURL=main.css.map */
