--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,14 +1,30 @@
+$dark: #2b2b2b;
+
 * {
   font-family: 'Roboto', sans-serif;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+section {
+  width: 100%;
+  padding: 24px 0;
+
+  &.darker {
+    background: #f8fafb;
+  }
+}
 
 address {
   font-size: inherit !important;
 }
 
 .mdl-layout__header--transparent {
-  color: #2b2b2b !important;
+  color: $dark !important;
 
   a {
     color: inherit;
@@ -18,13 +34,17 @@ address {
 }
 
 .mdl-layout__drawer-button {
-  color: #2b2b2b !important;
+  color: $dark !important;
 }
 
 .page-content {
+  width: 100vw;
+}
+
+.section-content {
   margin: 0 auto;
-  width: 90vw;
   max-width: 900px;
+  width: 90vw;
 }
 
 .intro-image {
@@ -40,11 +60,13 @@ address {
 }
 
 .outlined {
-  border: 1px solid #2b2b2b;
+  border: 1px solid $dark;
 }
+
 .parent-item {
   font-weight: 700 !important;
 }
+
 .child-item {
   margin-left: 12px !important;
 }
@@ -54,21 +76,59 @@ section {
 }
 
 .card-topic {
-  margin-top: -28px;
-  background: #fff !important;
-//  box-shadow: 0 2px 2px -1.5px rgba(0,0,0,.48) !important
+  margin: 0 auto 0 auto;
 
-  box-shadow: 0 2px 2.5px -1.4px rgba(0,0,0,.12) !important;
+  width: 58px;
+  height: 29px;
+
+  .card-topic-icon {
+    margin-top: -28px;
+    background: #fff !important;
+    box-shadow: none !important;
+  }
 }
+
 .no-hidden-overflow {
   overflow: visible !important;
   margin: 24px auto 24px auto;
 }
+
 .smaller-headline {
   font-size: 18px
 }
-.mdl-card__media img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
+.mdl-card__media {
+
+  background: none !important;
+  box-shadow: none !important;
+  position: relative;
+
+  img {
+    width: 90%;
+    object-fit: contain;
+    position: absolute;
+    bottom: 48px;
+
+    &.image-left {
+      left: 0;
+    }
+
+    &.image-right {
+      right: 0;
+    }
+  }
+}
+
+.simple-border {
+  border: 1px solid rgba($dark, .25);
+}
+
+.simple-border-bottom {
+
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  border: 1px solid rgba($dark, .25);
+  border-top: 0;
+
+  box-sizing: border-box;
 }
