--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -16,7 +16,8 @@ address {
   font-size: inherit !important; }
 
 .mdl-layout__header--transparent {
-  color: #2b2b2b !important; }
+  color: #2b2b2b !important;
+  padding-bottom: 96px; }
   .mdl-layout__header--transparent a {
     color: inherit;
     text-decoration: none; }
@@ -93,5 +94,10 @@ section {
   border: 1px solid rgba(43, 43, 43, 0.25);
   border-top: 0;
   box-sizing: border-box; }
+
+mdl-mega-footer__middle-section {
+  margin: 0 auto; }
+  mdl-mega-footer__middle-section .mdl-mega-footer__drop-down-section {
+    width: 30%; }
 
 /*# sourceMappingURL=main.css.map */
