--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -8,7 +8,9 @@ a {
 
 section {
   width: 100%;
-  padding: 24px 0; }
+  padding: 24px 0 96px 0; }
+  section:first-child {
+    padding-top: 96px; }
   section.darker {
     background: #f8fafb; }
 
@@ -17,7 +19,7 @@ address {
 
 .mdl-layout__header--transparent {
   color: #2b2b2b !important;
-  padding-bottom: 96px; }
+  padding-bottom: 12px; }
   .mdl-layout__header--transparent a {
     color: inherit;
     text-decoration: none; }
@@ -51,9 +53,6 @@ address {
 
 .child-item {
   margin-left: 12px !important; }
-
-section {
-  padding-bottom: 48px; }
 
 .card-topic {
   margin: 0 auto 0 auto;
