--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,10 @@
 <nav {% if site.show_full_navigation %} class="mdl-navigation" {% endif %}>
 
     <span class="mdl-layout-title">
-        <a class="mdl-navigation__link" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <a class="mdl-typography--title mdl-navigation__link" href="{{ site.baseurl }}/"><h3 class="mdl-typography--title">{{ site.title }}</h3></a>
     </span>
 
+    <hr>
 
     {% assign grouped = site.docs | group_by: 'category' %}
     {% for group in grouped %}
@@ -17,10 +18,10 @@
     <hr>
     {% endfor %}
 
-    <hr>
-
+    <!--
     {% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}
     <a class="mdl-navigation__link" href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>
+    -->
 
     {% assign releasenotes = site.html_pages | where: 'url', '/releasenotes/' | first %}
     <a class="mdl-navigation__link" href="{{ site.baseurl }}/releasenotes/">{{ releasenotes.title }}</a>
