--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -27,13 +27,10 @@ address {
 .mdl-layout__drawer-button {
   color: #2b2b2b !important; }
 
-.page-content {
-  width: 100vw; }
-
 .section-content {
   margin: 0 auto;
-  max-width: 900px;
-  width: 90vw; }
+  padding: 48px;
+  max-width: 940px; }
 
 .intro-image {
   width: 100%;
