--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -24,6 +24,15 @@ address {
     color: inherit;
     text-decoration: none; }
 
+@media screen and (max-width: 1024px) {
+  .mdl-layout__header {
+    display: flex !important; } }
+@media screen and (max-width: 800px) {
+  section:first-child {
+    padding-top: 0; }
+
+  .mdl-cell--hide-phone {
+    display: none; } }
 .mdl-layout__drawer-button {
   color: #2b2b2b !important; }
 
@@ -62,7 +71,8 @@ address {
 
 .no-hidden-overflow {
   overflow: visible !important;
-  margin: 24px auto 24px auto; }
+  margin-top: 24px;
+  margin-bottom: 24px; }
 
 .smaller-headline {
   font-size: 18px; }
