style (index): improved responsive design

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -50,6 +50,9 @@ address {
     padding-top: 0;
   }
 
+  .section-content {
+    padding: 0 12px !important;
+  }
   .mdl-cell--hide-phone {
     display: none;
   }
