--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -31,6 +31,9 @@ address {
   section:first-child {
     padding-top: 0; }
 
+  .section-content {
+    padding: 0 12px !important; }
+
   .mdl-cell--hide-phone {
     display: none; } }
 .mdl-layout__drawer-button {
