--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,55 +1,17 @@
 ---
 layout: default
 ---
-<!--
 
-<nav {% if site.show_full_navigation %}class="full-navigation" {% endif %}>
-
-    <ul>
-        <li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
-            {% assign home = site.html_pages | where: 'url', '/' | first %}
-            <a href="{{ site.baseurl }}/">{{ home.title }}</a>
-        </li>
-    </ul>
-
-    <ul>
-        {% assign grouped = site.docs | group_by: 'category' %}
-        {% for group in grouped %}
-        <li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
-            {% assign items = group.items | sort: 'order' %}
-            <a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
-            <ul>
-                {% for item in items %}
-                <li class="nav-item {% if item.url == page.url %}current{% endif %}"><a
-                    href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
-                {% endfor %}
-            </ul>
-        </li>
-        {% endfor %}
-    </ul>
-
-    <ul>
-        <li class="nav-item top-level {% if page.url == '/changelog/' %}current{% endif %}">
-            {% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}
-            <a href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>
-        </li>
-        <li class="nav-item top-level {% if page.url == '/releasenotes/' %}current{% endif %}">
-            {% assign releasenotes = site.html_pages | where: 'url', '/releasenotes/' | first %}
-            <a href="{{ site.baseurl }}/releasenotes/">{{ releasenotes.title }}</a>
-        </li>
-    </ul>
-
-    <ul>
-        <li class="nav-item top-level">
-            <a href="{{site.git.url}}" target="_blank">Preview on {{site.git.title}}</a>
-        </li>
-    </ul>
-</nav>
--->
 
 <div class="section-content">
-    <h2>{{ page.title }}</h2>
+    <!-- post header -->
+    <h2 class="mdl-typography--headline">
+        {% if page.category %}{{ page.category }}
+        {% else %}{{ site.title }}{% endif %}
+    </h2>
+    <h1 class="mdl-typography--display-1">{{ page.title }}</h1>
 
+    <!-- post content -->
     {{ content }}
 
     {% if page.link %}
@@ -58,4 +20,5 @@ layout: default
         <a href={{ page.link }}>&rarr; Read more on GitHub</a>
     </p>
     {% endif %}
+
 </div>
