--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,112 +1,59 @@
-* {
-  font-family: 'Roboto', sans-serif; }
+/*
+Error: File to import not found or unreadable: code.
+        on line 4 of main.scss
 
-a {
-  color: inherit;
-  text-decoration: none;
-  font-weight: bolder; }
+1: 
+2: 
+3: $dark: #2b2b2b;
+4: @import "code";
+5: 
+6: * {
+7:   font-family: 'Roboto', sans-serif;
+8: }
+9: 
 
-section {
-  width: 100%;
-  padding: 24px 0 96px 0; }
-  section:first-child {
-    padding-top: 96px; }
-  section.darker {
-    background: #f8fafb; }
-
-address {
-  font-size: inherit !important; }
-
-.mdl-layout__header--transparent {
-  color: #2b2b2b !important;
-  padding-bottom: 12px; }
-  .mdl-layout__header--transparent a {
-    color: inherit;
-    text-decoration: none; }
-
-@media screen and (max-width: 1024px) {
-  .mdl-layout__header {
-    display: flex !important; } }
-@media screen and (max-width: 800px) {
-  section:first-child {
-    padding-top: 0; }
-
-  .section-content {
-    padding: 0 12px !important; }
-
-  .mdl-cell--hide-phone {
-    display: none; } }
-.mdl-layout__drawer-button {
-  color: #2b2b2b !important; }
-
-.section-content {
-  margin: 0 auto;
-  padding: 48px;
-  max-width: 940px; }
-
-.intro-image {
-  width: 100%;
-  max-width: 350px;
-  position: absolute;
-  left: 0;
-  bottom: 48px; }
-
-.rounded {
-  border-radius: 18px; }
-
-.outlined {
-  border: 1px solid #2b2b2b; }
-
-.parent-item {
-  font-weight: 700 !important; }
-
-.child-item {
-  margin-left: 12px !important; }
-
-.card-topic {
-  margin: 0 auto 0 auto;
-  width: 58px;
-  height: 29px; }
-  .card-topic .card-topic-icon {
-    margin-top: -28px;
-    background: #fff !important;
-    box-shadow: none !important; }
-
-.no-hidden-overflow {
-  overflow: visible !important;
-  margin-top: 24px;
-  margin-bottom: 24px; }
-
-.smaller-headline {
-  font-size: 18px; }
-
-.mdl-card__media {
-  background: none !important;
-  box-shadow: none !important;
-  position: relative; }
-  .mdl-card__media img {
-    width: 90%;
-    object-fit: contain;
-    position: absolute;
-    bottom: 48px; }
-    .mdl-card__media img.image-left {
-      left: 0; }
-    .mdl-card__media img.image-right {
-      right: 0; }
-
-.simple-border {
-  border: 1px solid rgba(43, 43, 43, 0.25); }
-
-.simple-border-bottom {
-  border-bottom-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-  border: 1px solid rgba(43, 43, 43, 0.25);
-  border-top: 0;
-  box-sizing: border-box; }
-
-mdl-mega-footer__middle-section {
-  margin: 0 auto; }
-  mdl-mega-footer__middle-section .mdl-mega-footer__drop-down-section {
-    width: 30%; }
-
-/*# sourceMappingURL=main.css.map */
+Backtrace:
+main.scss:4
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/import_node.rb:44:in `import'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:310:in `visit_import'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/stack.rb:135:in `with_frame'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:10:in `visit'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/engine.rb:307:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/plugin.rb:82:in `update_stylesheets'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:338:in `watch_or_update'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/exec/base.rb:50:in `parse'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/lib/sass/exec/base.rb:18:in `parse!'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.5.7/bin/scss:13:in `<top (required)>'
+/usr/local/bin/scss:22:in `load'
+/usr/local/bin/scss:22:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: code.\A         on line 4 of main.scss\A \A 1: \A 2: \A 3: $dark: #2b2b2b;\A 4: @import \"code\";\A 5: \A 6: * {\A 7:   font-family: 'Roboto', sans-serif;\A 8: }\A 9: "; }
