--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,167 +1,12 @@
+---
+layout: null
+sitemap: true
+---
+
 $dark: #2b2b2b;
 
-* {
-  font-family: 'Roboto', sans-serif;
-}
+@import "pygments";
+@import "code";
+@import "elements";
+@import "normalize";
 
-a {
-  color: inherit;
-  text-decoration: none;
-  font-weight: bolder;
-}
-
-section {
-  width: 100%;
-  padding: 24px 0 96px 0;
-
-  &:first-child {
-    padding-top: 96px;
-  }
-
-  &.darker {
-    background: #f8fafb;
-  }
-}
-
-address {
-  font-size: inherit !important;
-}
-
-.mdl-layout__header--transparent {
-  color: $dark !important;
-  padding-bottom: 12px;
-
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-}
-
-@media screen and (max-width: 1024px) {
-  .mdl-layout__header {
-     display: flex !important;
-  }
-}
-
-
-@media screen and (max-width: 800px) {
-  section:first-child {
-    padding-top: 0;
-  }
-
-  .section-content {
-    padding: 0 12px !important;
-  }
-  .mdl-cell--hide-phone {
-    display: none;
-  }
-}
-
-.mdl-layout__drawer-button {
-  color: $dark !important;
-}
-
-.page-content {
-//  width: 100vw;
-}
-
-.section-content {
-  margin: 0 auto;
-  padding: 48px;
-  max-width: 940px;
-//  max-width: 900px;
-//  width: 90vw;
-}
-
-.intro-image {
-  width: 100%;
-  max-width: 350px;
-  position: absolute;
-  left: 0;
-  bottom: 48px;
-}
-
-.rounded {
-  border-radius: 18px;
-}
-
-.outlined {
-  border: 1px solid $dark;
-}
-
-.parent-item {
-  font-weight: 700 !important;
-}
-
-.child-item {
-  margin-left: 12px !important;
-}
-
-.card-topic {
-  margin: 0 auto 0 auto;
-
-  width: 58px;
-  height: 29px;
-
-  .card-topic-icon {
-    margin-top: -28px;
-    background: #fff !important;
-    box-shadow: none !important;
-  }
-}
-
-.no-hidden-overflow {
-  overflow: visible !important;
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
-
-.smaller-headline {
-  font-size: 18px
-}
-
-.mdl-card__media {
-
-  background: none !important;
-  box-shadow: none !important;
-  position: relative;
-
-  img {
-    width: 90%;
-    object-fit: contain;
-    position: absolute;
-    bottom: 48px;
-
-    &.image-left {
-      left: 0;
-    }
-
-    &.image-right {
-      right: 0;
-    }
-  }
-}
-
-.simple-border {
-  border: 1px solid rgba($dark, .25);
-}
-
-.simple-border-bottom {
-
-  border-bottom-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-  border: 1px solid rgba($dark, .25);
-  border-top: 0;
-
-  box-sizing: border-box;
-}
-
-mdl-mega-footer__middle-section {
-
-  margin: 0 auto;
-
-  .mdl-mega-footer__drop-down-section {
-    width: 30%;
-  }
-}
