--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
 <body>
 
-<div class="mdl-layout mdl-js-layout">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
 
     <!-- header -->
     {% include header.html %}
@@ -66,19 +66,6 @@
 </div>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript">
-    $('a[href*=\\#]').on('click', function (event) {
-        var el = $(this.hash);
-        if (el.length > 0) {
-            event.preventDefault();
-            $('html,body').animate({
-                scrollTop: $(this.hash).offset().top
-            }, 500);
-        }
-    });
-
-</script>
 </body>
 
 </html>
