--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,3 +1,21 @@
+// body
+
+// header
+
+
+// content
+
+
+// section
+
+
+// footer
+footer {
+  height: 224px;
+}
+
+
+// hr
 hr {
   display: block;
   height: 1px;
@@ -11,8 +29,26 @@ hr {
   }
 }
 
+// title with headline
 h3::before {
   content: "";
   @extend hr;
   margin: 60px 0;
+}
+
+// content
+.feature-content {
+  p {
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+    font-weight: 300!important;
+    letter-spacing: 0;
+    margin: 0 0 16px;
+    line-height: 32px;
+  }
+
+}
+
+// icons
+.github-icon {
+  padding: 0 0 0 24px;
 }
