--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -3,7 +3,6 @@
  */
 
 html {
-  font-family: 'Roboto', sans-serif;
   height: 100%;
   max-height: 100%;
   letter-spacing: 0.01rem;
@@ -15,6 +14,7 @@ html {
 }
 
 body {
+  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
   margin: 0;
 }
 
@@ -32,7 +32,7 @@ section {
   width: 100%;
   padding: 24px 0 48px 0;
 
-  &:first-child {
+  &.padding-top {
     padding-top: 96px;
   }
 
@@ -183,4 +183,8 @@ mdl-mega-footer__middle-section {
   .mdl-mega-footer__drop-down-section {
     width: 30%;
   }
+}
+
+.mdl-layout__drawer .mdl-navigation {
+  padding-top: 0 !important;
 }
