feature: fix sidebar in docs, but not on landing page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
 <body>
 
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
+<div class="mdl-layout mdl-js-layout {% unless page.layout == 'default' %}mdl-layout--fixed-drawer{% endunless %}">
 
     <!-- header -->
     {% include header.html %}
