--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 ---
-
-
-<div class="section-content">
+<div class="section-content no-padding-top">
     <!-- post header -->
     <h2 class="mdl-typography--headline">
         {% if page.category %}{{ page.category }}
