--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,10 +19,19 @@
     <hr class="no-spacing">
     {% endfor %}
 
-    <!--
-    {% assign changelog = site.html_pages | where: 'url', '/changelog/' | first %}
-    <a class="mdl-navigation__link" href="{{ site.baseurl }}/changelog/">{{ changelog.title }}</a>
-    -->
+    <!-- Manual (perhaps we could separate it later) -->
+    {% assign grouped = site.manual | group_by: 'category' %}
+    {% for group in grouped %}
+    {% assign items = group.items | sort: 'order' %}
+    <a class="mdl-navigation__link parent-item" href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
+    <!-- child elements -->
+    {% for item in items %}
+    <a class="mdl-navigation__link child-item" href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+    {% endfor %}
+
+    <hr class="no-spacing">
+    {% endfor %}
+
 
     {% assign releasenotes = site.html_pages | where: 'url', '/releasenotes/' | first %}
     <a class="mdl-navigation__link" href="{{ site.baseurl }}/releasenotes/">{{ releasenotes.title }}</a>
