fix missing icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <!-- Title -->
         {% unless page.layout != 'default' %}
         <a href="{{ site.baseurl }}/" class="title">
-            <img src="{{ site.baseurl }} {{ site.logo }}" class="logo">
+            <img src="{{ site.baseurl }}/{{ site.logo }}" class="logo">
             <h1 class="mdl-typography--display-1">
                 {{ site.title }}
             </h1>
