--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -59,10 +59,15 @@ address {
 @media screen and (max-width: 1024px) {
   .mdl-layout__header {
     display: flex !important;
+    background-color: rgba(#fff, .1);
   }
 }
 
 @media screen and (max-width: 800px) {
+  .desktop-only {
+    display: none;
+  }
+
   section:first-child {
     padding-top: 0;
   }
@@ -103,11 +108,18 @@ address {
 }
 
 .rounded {
-  border-radius: 18px;
+  border-radius: 100px;
 }
 
 .outlined {
   border: 1px solid $dark;
+  padding: 6px 16px;
+  margin: 0 12px;
+}
+
+.center {
+  text-align: center;
+  display: block !important;
 }
 
 .parent-item {
