--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -4,8 +4,8 @@
             <i class="material-icons">{{ feature.icon }}</i>
         </button>
     </div>
-    <div class="mdl-card__title">
-        <h4 class="mdl-card__title-text">{{ feature.title }}</h4>
+    <div class="mdl-card__title mdl-typography--text-center center">
+        <h4 class="mdl-typography--display-1 mdl-typography--font-light">{{ feature.title }}</h4>
     </div>
     <div class="mdl-card__supporting-text">
         <div class="feature-content">
