refactor: clean up and prepare for release 1.0.0

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- getMDL layout-->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-amber.min.css">
+    <link rel="stylesheet" href="{{site.template}}">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
     <!-- offline (developer) usage -->
