--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -167,8 +167,8 @@ address {
   img {
     width: 90%;
     object-fit: contain;
-    position: absolute;
-    bottom: 48px;
+    //position: absolute;
+    //bottom: 48px;
 
     &.image-left {
       left: 0;
@@ -204,4 +204,11 @@ mdl-mega-footer__middle-section {
 
 .mdl-layout__drawer .mdl-navigation {
   padding-top: 0 !important;
+}
+
+.topic-icon .material-icons {
+  font-size: 30px !important;
+  transform: translate(-15px, -15px) !important;
+  line-height: 30px !important;
+  width: 30px !important;
 }
