style: fix icon size in features

--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -206,7 +206,7 @@ mdl-mega-footer__middle-section {
   padding-top: 0 !important;
 }
 
-.topic-icon .material-icons {
+.card-topic-icon .material-icons {
   font-size: 30px !important;
   transform: translate(-15px, -15px) !important;
   line-height: 30px !important;
